Fix : mac header alignments

--- a/src/index.css
+++ b/src/index.css
@@ -1023,6 +1023,16 @@ display:none;
   .ui-thumb>h1{
     font-size: 51px;
   }
+  .photo-h1{
+    margin-left: 50px;
+  }
+  .ill-5{
+    height: 450px !important;
+  }
+  .photo-co>.row{
+    width: 95%;
+    margin-left: 50px;
+  }
 }
 
 @media screen and (min-width: 3500px){
